tests/NormalTests/paczka1/fuzzy1/18163989.err
Error in line 13: aoNkemD A800 55,6
Error in line 27: A739 A308 123,5
Error in line 28: A739 A800 41,4
Error in line 32: dNU56s A739 43,5
Error in line 40: 1gS3slsN A800 185,08
